--- a/app/src/main/res/layout/item_view_weather_time_snapshots.xml
+++ b/app/src/main/res/layout/item_view_weather_time_snapshots.xml
@@ -11,21 +11,63 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="8dp"
         android:paddingTop="8dp"
         android:paddingBottom="16dp">
+
+        <RelativeLayout
+            android:id="@+id/relLay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="90dp"
+            app:layout_constraintBottom_toTopOf="@+id/labelHumidity"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="visible">
+
+            <TextView
+                android:id="@+id/textViewMinTemp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="4dp"
+                android:textSize="14sp"
+                tools:text="23°" />
+
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/imageViewForecastIcon"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_below="@id/textViewMinTemp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="4dp"
+                android:visibility="visible"
+                tools:src="@drawable/a10d_svg" />
+
+            <TextView
+                android:id="@+id/textViewMaxTemp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/imageViewForecastIcon"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="8dp"
+                android:textSize="14sp"
+                tools:text="23°" />
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/labelHumidity"
             style="@style/AppTheme.Body1"
             android:layout_width="0dp"
             android:layout_height="38dp"
-            android:layout_marginStart="8dp"
             android:ellipsize="end"
             android:gravity="center_vertical"
             android:lines="1"
+            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="@+id/valueHumidity"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/relLay"
             tools:text="@string/humidity" />
 
         <TextView
@@ -33,12 +75,13 @@
             style="@style/AppTheme.Body1"
             android:layout_width="0dp"
             android:layout_height="38dp"
-            android:layout_marginStart="90dp"
+            android:layout_marginLeft="88dp"
             android:ellipsize="end"
             android:gravity="center_vertical"
             android:lines="1"
             app:layout_constraintLeft_toRightOf="@id/labelHumidity"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/relLay"
+
             tools:text="67%" />
 
         <TextView
@@ -50,6 +93,7 @@
             android:ellipsize="end"
             android:gravity="center_vertical"
             android:lines="1"
+            android:visibility="visible"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/labelHumidity"
             tools:text="@string/wind" />
@@ -77,6 +121,7 @@
             android:ellipsize="end"
             android:gravity="center_vertical"
             android:lines="1"
+            android:visibility="visible"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/labelWind"
             tools:text="@string/weather" />
@@ -95,120 +140,14 @@
             tools:text="Mostly sunny" />
 
 
-        <TextView
-            android:id="@+id/labelSunrise"
-            style="@style/AppTheme.Body1"
-            android:layout_width="0dp"
-            android:layout_height="38dp"
-            android:layout_marginStart="8dp"
-            android:ellipsize="end"
-            android:gravity="center_vertical"
-            android:lines="1"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/labelWeather"
-            tools:text="@string/sunrise" />
-
-        <TextView
-            android:id="@+id/valueSunrise"
-            style="@style/AppTheme.Body1"
-            android:layout_width="0dp"
-            android:layout_height="38dp"
-            android:ellipsize="end"
-            android:gravity="center_vertical"
-            android:lines="1"
-            app:layout_constraintLeft_toLeftOf="@id/valueWeather"
-            app:layout_constraintLeft_toRightOf="@id/labelSunrise"
-            app:layout_constraintTop_toBottomOf="@id/valueWeather"
-            tools:text="7:15 am" />
-
-
-        <TextView
-            android:id="@+id/labelSunset"
-            style="@style/AppTheme.Body1"
-            android:layout_width="0dp"
-            android:layout_height="38dp"
-            android:layout_marginStart="8dp"
-            android:ellipsize="end"
-            android:gravity="center_vertical"
-            android:lines="1"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/labelSunrise"
-            tools:text="@string/sunset" />
-
-        <TextView
-            android:id="@+id/valueSunset"
-            style="@style/AppTheme.Body1"
-            android:layout_width="0dp"
-            android:layout_height="38dp"
-            android:ellipsize="end"
-            android:gravity="center_vertical"
-            android:lines="1"
-            app:layout_constraintLeft_toLeftOf="@id/valueSunrise"
-            app:layout_constraintLeft_toRightOf="@id/labelSunset"
-            app:layout_constraintTop_toBottomOf="@id/valueSunrise"
-            tools:text="7:15 am" />
-
-        <TextView
-            android:id="@+id/labelMinTemp"
-            style="@style/AppTheme.Body1"
-            android:layout_width="0dp"
-            android:layout_height="38dp"
-            android:layout_marginStart="8dp"
-            android:ellipsize="end"
-            android:gravity="center_vertical"
-            android:lines="1"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/labelSunset"
-            tools:text="@string/minTemp" />
-
-        <TextView
-            android:id="@+id/valueMinTemp"
-            style="@style/AppTheme.Body1"
-            android:layout_width="0dp"
-            android:layout_height="38dp"
-            android:ellipsize="end"
-            android:gravity="center_vertical"
-            android:lines="1"
-            app:layout_constraintLeft_toLeftOf="@id/valueSunset"
-            app:layout_constraintLeft_toRightOf="@id/labelMinTemp"
-            app:layout_constraintTop_toBottomOf="@id/valueSunset"
-            tools:text="55" />
-
-
-        <TextView
-            android:id="@+id/labelMaxTemp"
-            style="@style/AppTheme.Body1"
-            android:layout_width="0dp"
-            android:layout_height="38dp"
-            android:layout_marginStart="8dp"
-            android:ellipsize="end"
-            android:gravity="center_vertical"
-            android:lines="1"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/labelMinTemp"
-            tools:text="Maximum Temp" />
-
-
-        <TextView
-            android:id="@+id/valueMaxTemp"
-            style="@style/AppTheme.Body1"
-            android:layout_width="0dp"
-            android:layout_height="38dp"
-            android:ellipsize="end"
-            android:gravity="center_vertical"
-            android:lines="1"
-            app:layout_constraintLeft_toLeftOf="@id/valueMinTemp"
-            app:layout_constraintLeft_toRightOf="@id/labelMaxTemp"
-            app:layout_constraintTop_toBottomOf="@id/valueMinTemp"
-            tools:text="75" />
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/cardViewHoursOfDayContainer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/valueMaxTemp"
+            app:layout_constraintTop_toBottomOf="@id/valueWeather"
             app:layout_constraintLeft_toLeftOf="parent"
-
+            android:background="@color/colorAccent"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="24dp"
             android:layout_marginTop="24dp"
