--- a/app/src/main/res/drawable/a01d_svg.xml
+++ b/app/src/main/res/drawable/a01d_svg.xml
@@ -5,13 +5,13 @@
         android:viewportHeight="512.0">
     <path
         android:pathData="M256,379.6C324.4,379.6 379.6,324 379.6,256C379.6,188 324,132.4 256,132.4C188,132.4 132.4,188 132.4,256C132.4,324 187.6,379.6 256,379.6ZM256,168.2C304.6,168.2 343.8,207.4 343.8,256C343.8,304.6 304.6,343.8 256,343.8C207.4,343.8 168.2,304.6 168.2,256C168.2,207.4 207.4,168.2 256,168.2Z"
-        android:fillColor="#FFFFFF"/>
+        android:fillColor="#000000"/>
     <path
         android:pathData="M274.1,75L274.1,18.1C274.1,7.9 266.2,0 256,0C245.8,0 237.9,7.9 237.9,18.1L237.9,75C237.9,85.2 245.8,93.1 256,93.1C266.2,93.1 274.1,85.2 274.1,75Z"
-        android:fillColor="#FFFFFF"/>
+        android:fillColor="#000000"/>
     <path
         android:pathData="M237.9,437L237.9,493.9C237.9,504.1 245.8,512 256,512C266.2,512 274.1,504.1 274.1,493.9L274.1,437C274.1,426.8 266.2,418.9 256,418.9C245.8,418.9 237.9,426.8 237.9,437Z"
-        android:fillColor="#FFFFFF"/>
+        android:fillColor="#000000"/>
     <path
         android:pathData="M396.8,140.8L437,100.6C444,93.6 444,82.1 437,75C429.9,68 418.4,68 411.4,75L371.2,115.2C364.1,122.3 364.1,133.7 371.2,140.8C374.7,144.3 379.1,146.1 384,146.1C388.9,146.1 393.3,144.3 396.8,140.8L396.8,140.8Z"
         android:fillColor="#FFFFFF"/>
