--- a/app/src/main/res/drawable/a50n_svg.xml
+++ b/app/src/main/res/drawable/a50n_svg.xml
@@ -4,24 +4,24 @@
         android:viewportWidth="512.0"
         android:viewportHeight="512.0">
     <path
-        android:fillColor="#000000"
+        android:fillColor="@color/pink"
         android:pathData="M0,353.8h477.5v34.5h-477.5z"/>
     <path
-        android:fillColor="#000000"
+        android:fillColor="@color/pink"
         android:pathData="M0,123.7h477.5v34.5h-477.5z"/>
     <path
-        android:fillColor="#000000"
+        android:fillColor="@color/pink"
         android:pathData="M0,238.7h477.5v34.5h-477.5z"/>
     <path
-        android:fillColor="#000000"
+        android:fillColor="@color/pink"
         android:pathData="M34.5,181.2h92v34.5h-92z"/>
     <path
-        android:fillColor="#000000"
+        android:fillColor="@color/pink"
         android:pathData="M161.1,181.2h350.9v34.5h-350.9z"/>
     <path
-        android:fillColor="#000000"
+        android:fillColor="@color/pink"
         android:pathData="M420,296.3h92v34.5h-92z"/>
     <path
-        android:fillColor="#000000"
+        android:fillColor="@color/pink"
         android:pathData="M34.5,296.3h350.9v34.5h-350.9z"/>
 </vector>
