--- a/app/src/main/res/layout/item_view_weather_hours_of_day.xml
+++ b/app/src/main/res/layout/item_view_weather_hours_of_day.xml
@@ -3,21 +3,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rootView"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="60dp"
+    android:layout_height="wrap_content"
+    android:padding="5dp"
     android:layout_marginStart="4dp"
     android:layout_marginTop="8dp"
     android:layout_marginEnd="4dp"
     android:layout_marginBottom="8dp"
-    android:background="@color/colorAccent"
-    app:cardBackgroundColor="@color/colorAccent"
-    app:cardCornerRadius="18dp"
+    android:background="@color/purple"
+    app:cardBackgroundColor="@color/purple"
+    android:layout_gravity="center"
+    app:cardCornerRadius="12dp"
     app:cardElevation="0dp">
 
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:layout_gravity="center">
 
         <TextView
             android:id="@+id/textViewTemp"
@@ -25,7 +29,9 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="4dp"
-            android:textSize="14sp"
+            android:gravity="center"
+            android:textSize="12sp"
+            android:textColor="@color/white"
             tools:text="23°" />
 
 
@@ -33,6 +39,7 @@
             android:id="@+id/imageViewForecastIcon"
             android:layout_width="24dp"
             android:layout_height="24dp"
+            android:gravity="center"
             android:layout_below="@id/textViewTemp"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="4dp"
@@ -46,8 +53,9 @@
             android:layout_below="@id/imageViewForecastIcon"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="8dp"
-            android:textSize="19sp"
-            android:textStyle="bold"
+            android:gravity="center"
+            android:textSize="12sp"
+            android:textColor="@color/white"
             tools:text="7 pm" />
     </RelativeLayout>
 </com.google.android.material.card.MaterialCardView>
