--- a/app/src/main/res/layout/item_view_weather_time_snapshots.xml
+++ b/app/src/main/res/layout/item_view_weather_time_snapshots.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardElevation="4dp"
-    app:cardCornerRadius="2dp"
+    android:padding="10dp"
+    android:layout_margin="10dp"
+    app:cardCornerRadius="15dp"
     app:cardUseCompatPadding="false">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -19,16 +21,30 @@
             android:id="@+id/relLay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="90dp"
+            android:layout_marginLeft="152dp"
+            android:layout_marginEnd="152dp"
+            android:gravity="center_horizontal"
+            android:visibility="visible"
             app:layout_constraintBottom_toTopOf="@+id/labelHumidity"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:visibility="visible">
+            app:layout_constraintTop_toTopOf="parent">
 
             <TextView
-                android:id="@+id/textViewMinTemp"
+                android:id="@+id/txtDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="4dp"
+                android:textColor="@color/pink"
+                android:textSize="24sp"
+                tools:text="Friday" />
+
+            <TextView
+                android:id="@+id/textViewTemp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/txtDate"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="4dp"
                 android:textSize="14sp"
@@ -37,21 +53,32 @@
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/imageViewForecastIcon"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_below="@id/textViewMinTemp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_below="@id/textViewTemp"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="4dp"
                 android:visibility="visible"
                 tools:src="@drawable/a10d_svg" />
 
             <TextView
+                android:id="@+id/textViewMinTemp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/imageViewForecastIcon"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="8dp"
+                android:textSize="14sp"
+                tools:text="23°" />
+
+            <TextView
                 android:id="@+id/textViewMaxTemp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/imageViewForecastIcon"
-                android:layout_centerHorizontal="true"
+                android:layout_marginLeft="30dp"
                 android:layout_marginTop="8dp"
+                android:layout_toRightOf="@+id/textViewMinTemp"
                 android:textSize="14sp"
                 tools:text="23°" />
         </RelativeLayout>
@@ -61,6 +88,8 @@
             style="@style/AppTheme.Body1"
             android:layout_width="0dp"
             android:layout_height="38dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="30dp"
             android:ellipsize="end"
             android:gravity="center_vertical"
             android:lines="1"
@@ -75,7 +104,8 @@
             style="@style/AppTheme.Body1"
             android:layout_width="0dp"
             android:layout_height="38dp"
-            android:layout_marginLeft="88dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="40dp"
             android:ellipsize="end"
             android:gravity="center_vertical"
             android:lines="1"
@@ -89,7 +119,7 @@
             style="@style/AppTheme.Body1"
             android:layout_width="0dp"
             android:layout_height="38dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginLeft="30dp"
             android:ellipsize="end"
             android:gravity="center_vertical"
             android:lines="1"
@@ -117,7 +147,8 @@
             style="@style/AppTheme.Body1"
             android:layout_width="0dp"
             android:layout_height="38dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="4dp"
             android:ellipsize="end"
             android:gravity="center_vertical"
             android:lines="1"
@@ -140,30 +171,22 @@
             tools:text="Mostly sunny" />
 
 
-
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/cardViewHoursOfDayContainer"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewHoursOfDay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/valueWeather"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:background="@color/colorAccent"
             android:layout_centerHorizontal="true"
+            android:layout_margin="5dp"
+
             android:layout_marginStart="24dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="64dp"
-            app:cardCornerRadius="24dp">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerViewHoursOfDay"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:orientation="horizontal"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                tools:listitem="@layout/item_view_weather_hours_of_day" />
-        </com.google.android.material.card.MaterialCardView>
+            android:orientation="horizontal"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/valueWeather"
+            tools:listitem="@layout/item_view_weather_hours_of_day" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
