--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,7 +4,8 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.splash.SplashActivity">
+    android:background="@drawable/sp_screen"
+    tools:context=".ui.splash.SplashActivity">
 
-    <!--TODO: Add the design-->
+
 </androidx.constraintlayout.widget.ConstraintLayout>
