--- a/app/src/main/res/drawable/ic_splash_big_cloud.xml
+++ b/app/src/main/res/drawable/ic_splash_big_cloud.xml
@@ -3,7 +3,7 @@
     android:height="62.922dp"
     android:viewportWidth="85.13"
     android:viewportHeight="62.922">
-  <path
-      android:pathData="M53.669,0A31.368,31.368 0,0 0,23.5 22.578a18.233,18.233 0,0 0,-3.146 -0.37,20.357 20.357,0 0,0 0,40.714L53.669,62.922A31.461,31.461 0,1 0,53.669 0Z"
-      android:fillColor="#1AFFFFFF"/>
+    <path
+        android:fillColor="#1AFFFFFF"
+        android:pathData="M53.669,0A31.368,31.368 0,0 0,23.5 22.578a18.233,18.233 0,0 0,-3.146 -0.37,20.357 20.357,0 0,0 0,40.714L53.669,62.922A31.461,31.461 0,1 0,53.669 0Z" />
 </vector>
