--- a/app/src/main/res/layout/item_view_weather_hours_of_day.xml
+++ b/app/src/main/res/layout/item_view_weather_hours_of_day.xml
@@ -5,14 +5,14 @@
     android:id="@+id/rootView"
     android:layout_width="60dp"
     android:layout_height="wrap_content"
-    android:padding="5dp"
+    android:layout_gravity="center"
     android:layout_marginStart="4dp"
     android:layout_marginTop="8dp"
     android:layout_marginEnd="4dp"
     android:layout_marginBottom="8dp"
     android:background="@color/purple"
+    android:padding="5dp"
     app:cardBackgroundColor="@color/purple"
-    android:layout_gravity="center"
     app:cardCornerRadius="12dp"
     app:cardElevation="0dp">
 
@@ -20,8 +20,8 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:layout_gravity="center">
+        android:layout_gravity="center"
+        android:padding="10dp">
 
         <TextView
             android:id="@+id/textViewTemp"
@@ -30,8 +30,8 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="4dp"
             android:gravity="center"
-            android:textSize="12sp"
             android:textColor="@color/white"
+            android:textSize="12sp"
             tools:text="23°" />
 
 
@@ -39,10 +39,10 @@
             android:id="@+id/imageViewForecastIcon"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:gravity="center"
             android:layout_below="@id/textViewTemp"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="4dp"
+            android:gravity="center"
             android:visibility="visible"
             tools:src="@drawable/a10d_svg" />
 
@@ -54,8 +54,8 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="8dp"
             android:gravity="center"
-            android:textSize="12sp"
             android:textColor="@color/white"
+            android:textSize="12sp"
             tools:text="7 pm" />
     </RelativeLayout>
 </com.google.android.material.card.MaterialCardView>
