--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/itemHome"
-          android:title="@string/menu_home"
-          android:titleCondensed="@string/menu_home"
-          android:icon="@drawable/selector_home"
-          app:showAsAction="always"/>
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+        android:id="@+id/itemHome"
+        android:icon="@drawable/selector_home"
+        android:title="@string/menu_home"
+        android:titleCondensed="@string/menu_home"
+        app:showAsAction="always" />
 
 </menu>
