--- a/app/src/main/res/layout/fragment_forecast.xml
+++ b/app/src/main/res/layout/fragment_forecast.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_dummy"
+        android:id="@+id/rv_weatherForecast"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
